Modificado método construtor da Classe Game, Adicionado sistema de nome do jogador CPU aleatório de uma lista no arquivo config.

--- a/config
+++ b/config
@@ -1,4 +1,10 @@
 war_map
 war_map_t
-Jossesbaldo
-Mortinumbio
+Hitler
+Napoleão Bonaparte
+Vladimir Vladimirovitch Putin
+Kim Jong-un
+Donald Fucking Trump
+Alexandre o grande
+Genghis Khan
+Julio Cesar
