Organizado tela principal

--- a/config
+++ b/config
@@ -1,10 +1,9 @@
 war_map
 war_map_t
 Hitler
-Napoleão Bonaparte
-Vladimir Vladimirovitch Putin
-Kim Jong-un
-Donald Fucking Trump
-Alexandre o grande
-Genghis Khan
-Julio Cesar
+Napoleão
+Vladimir
+Kim
+Trump
+Genghis
+Julio
